# FakeInfoHardwareSpoofer

./: .gitignore  CMakeLists.txt  HardwareRandomizer.cpp  HardwareRandomizer.h  HookDLL.cpp  LICENSE  MainWindow.cpp  MainWindow.h  README.md  SystemInfo.cpp  SystemInfo.h  build.bat  main.cpp  sample_config.json  test_registry.cpp  test_systeminfo.cpp  test_wmi.cpp  vcpkg.json
.github/workflows/: build.yml  code-quality.yml  installer.yml
scripts/: package.ps1  setup-dev.ps1
